<package format="2">
  <name>imu_pipeline</name>
  <version>0.3.0</version>
  <description>imu_pipeline</description>

  <license>BSD</license>
  <license>GPL</license>

  <url type="website">http://ros.org/wiki/imu_pipeline</url>
  <url type="bugtracker">https://github.com/ros-perception/imu_pipeline/issues</url>
  <url type="repository">https://github.com/ros-perception/imu_pipeline</url>

  <author email="chadrockey@gmail.com">Chad Rockey</author>
  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>imu_processors</exec_depend>
  <exec_depend>imu_transformer</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
