<package>
  <name>imu_processors</name>
  <version>0.2.2</version>
  <description>Processors for sensor_msgs::Imu data</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/imu_processors</url>
  <url type="bugtracker">https://github.com/ros-perception/imu_processors/issues</url>
  <url type="repository">https://github.com/ros-perception/imu_processors</url>

  <author email="chadrockey@gmail.com">Chad Rockey</author>
  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
