<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>imu_processors</name>
  <version>0.3.1</version>
  <description>Processors for sensor_msgs::Imu data</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/imu_processors</url>
  <url type="bugtracker">https://github.com/ros-perception/imu_processors/issues</url>
  <url type="repository">https://github.com/ros-perception/imu_processors</url>

  <author email="chadrockey@gmail.com">Chad Rockey</author>
  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>
