<?xml version="1.0"?>
<package format="2">
  <name>imu_transformer</name>
  <version>0.3.0</version>
  <description>Node/nodelet combination to transform sensor_msgs::Imu data from one frame into another.</description>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/imu_transformer</url>
  <url type="bugtracker">https://github.com/ros-perception/imu_transformer/issues</url>
  <url type="repository">https://github.com/ros-perception/imu_transformer</url>

  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>
  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nodelet</depend>
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>topic_tools</depend>

  <exec_depend>tf</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
